added http / https flags

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "create_keys": "openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout nginx.key -out nginx.crt",
-    "start": "node server.js"
+    "https": "export HTTPS=1; node server.js",
+    "http": "export HTTPS=0; node server.js"
   },
   "author": "",
   "license": "ISC",
